feat(DF-744): Added condition expression as if before the task definition

--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -351,140 +351,142 @@ stages:
     - checkout: nm-factory-inf-env-azdevops
       clean: true          
 
-    - task: Bash@3
-      displayName: "Config git user to proceed with commit"
-      condition: or(eq(parameters.option,'dplt_pipeline'),eq(parameters.option,'avitech_slovakia'),eq(parameters.option,'remove_user'),eq(parameters.option,'infra_admin'),eq(parameters.option,'support_contrib'))     
-      inputs:
-        targetType: inline
-        script: |
-          git config --global user.email dcachaza@paradigmadigital.com
-          git config --global user.name "David Cachaza Todoli" 
+    - ${{ if or(eq(parameters.option,'dplt_pipeline'),eq(parameters.option,'avitech_slovakia'),eq(parameters.option,'remove_user'),eq(parameters.option,'infra_admin'),eq(parameters.option,'support_contrib')) }}:
+      - task: Bash@3
+        displayName: "Config git user to proceed with commit"  
+        inputs:
+          targetType: inline
+          script: |
+            git config --global user.email dcachaza@paradigmadigital.com
+            git config --global user.name "David Cachaza Todoli" 
 
-    - task: AzureCLI@2
-      displayName: "Added user license for Azure Devops" 
-      condition: or(eq(parameters.option,'dplt_pipeline'),eq(parameters.option,'avitech_slovakia'),eq(parameters.option,'remove_user'),eq(parameters.option,'infra_admin'),eq(parameters.option,'support_contrib'))     
-      env:
-        ARM_CLIENT_ID: $(terraform-app-client-id)
-        ARM_CLIENT_SECRET: $(terraform-app-secret)
-        ARM_TENANT_ID: "9e296acd-1e44-44f0-8c77-cc9dbce85489"  #Must move to KeyVault or inside provider.tf
-      inputs:
-        azureSubscription: 'ecl-az-fact-svc-01-armconnection'
-        scriptType: 'bash'
-        scriptLocation: 'inlineScript'
-        inlineScript: |
-          #!/bin/bash   
+    - ${{ if or(eq(parameters.option,'dplt_pipeline'),eq(parameters.option,'avitech_slovakia'),eq(parameters.option,'remove_user'),eq(parameters.option,'infra_admin'),eq(parameters.option,'support_contrib')) }}:
+      - task: AzureCLI@2
+        displayName: "Added user license for Azure Devops" 
+        condition: or(eq(parameters.option,'dplt_pipeline'),eq(parameters.option,'avitech_slovakia'),eq(parameters.option,'remove_user'),eq(parameters.option,'infra_admin'),eq(parameters.option,'support_contrib'))     
+        env:
+          ARM_CLIENT_ID: $(terraform-app-client-id)
+          ARM_CLIENT_SECRET: $(terraform-app-secret)
+          ARM_TENANT_ID: "9e296acd-1e44-44f0-8c77-cc9dbce85489"  #Must move to KeyVault or inside provider.tf
+        inputs:
+          azureSubscription: 'ecl-az-fact-svc-01-armconnection'
+          scriptType: 'bash'
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            #!/bin/bash   
+  
+            echo "Create a new branch locally for $AZUREDEVOPSREPO repository"
+            cd $AZUREDEVOPSREPO
+            git checkout -b $BRANCHTARGET
+  
+            if [[ ${{ parameters.mail }} =~ "#EXT#@asistemaspt.onmicrosoft.com" ]]
+            then 
+              user_mail=${{ parameters.mail }}
+              mail_int=${user_mail//#EXT#@asistemaspt.onmicrosoft.com}
+              user_mail=${mail_int/_/@}
+            else
+              user_mail=${{ parameters.mail }}
+            fi
+  
+            echo "Added a new line to terraform.tfvars file at $AZUREDEVOPSREPO repository"              
+            case ${{ parameters.option }} in
+              infra_admin)
+                echo "Check that user is not currently at the group all_users"
+                mail=`sed -n '/^all_users/,/^]/p' terraform.tfvars | grep $user_mail`
+                if [[ -z "$mail" ]] 
+                then 
+                  echo "Adding new user to all_users group"
+                  sed -i "/all_users/a \ \ \"$user_mail\"," terraform.tfvars
+                  echo "User added to all_users group"
+                fi
+              ;;              
+              dplt_pipeline)
+                echo "Check that user is not currently at the group all_users"
+                mail=`sed -n '/^all_users/,/^]/p' terraform.tfvars | grep $user_mail`
+                if [[ -z "$mail" ]] 
+                then 
+                  echo "Adding new user to all_users group"
+                  sed -i "/all_users/a \ \ \"$user_mail\"," terraform.tfvars
+                  echo "User added to all_users group"
+                fi
+              ;;
+              avitech_slovakia)
+                echo "Check that user is not currently at the group all_users"
+                mail=`sed -n '/^all_users/,/^]/p' terraform.tfvars | grep $user_mail`
+                if [[ -z "$mail" ]] 
+                then 
+                  echo "Adding new user to all_users group"
+                  sed -i "/all_users/a \ \ \"$user_mail\"," terraform.tfvars
+                  echo "User added to all_users group"
+                fi
+              ;;
+              support_contrib)
+                echo "Check that user is not currently at the group all_users"
+                mail=`sed -n '/^all_users/,/^]/p' terraform.tfvars | grep $user_mail`
+                if [[ -z "$mail" ]] 
+                then 
+                  echo "Adding new user to all_users group"
+                  sed -i "/all_users/a \ \ \"$user_mail\"," terraform.tfvars
+                  echo "User added to all_users group"
+                fi
+              ;;
+              remove_user)
+                echo "Remove user from all groups"
+                sed -i "/$user_mail/d" terraform.tfvars
+                echo "User removed from all groups"
+              ;;
+              *)
+                echo "Bad option"
+              ;;
+            esac
+  
+            echo "Commit new branch to remote repository $AZUREDEVOPSREPO"
+            git add *
+            git commit -m "Performed the actions requested at ticket ${{ parameters.branch }}"
+            if [ $? -eq 0 ] 
+            then 
+              echo "Commit has worked properly" 
+            else 
+              echo "Commit has not worked"
+              exit 1 
+            fi
+  
+            echo "Push the new branch to remote repository $AZUREDEVOPSREPO"
+            git -c http.extraHeader="Authorization: bearer $(System.AccessToken)" push origin $BRANCHTARGET
+            if [ $? -eq 0 ] 
+            then 
+              echo "Push has worked properly" 
+            else 
+              echo "Push has not worked"
+              exit 1 
+            fi
+  
+            echo "Launched terraform commands"
+            echo "terraform init"
+            terraform init
+            echo "terraform apply"
+            terraform apply -auto-approve
+  
+            echo "Moving back to working path"
+            cd ..            
+  
+            echo "Logout from Azure account"
+            az logout
 
-          echo "Create a new branch locally for $AZUREDEVOPSREPO repository"
-          cd $AZUREDEVOPSREPO
-          git checkout -b $BRANCHTARGET
-
-          if [[ ${{ parameters.mail }} =~ "#EXT#@asistemaspt.onmicrosoft.com" ]]
-          then 
-            user_mail=${{ parameters.mail }}
-            mail_int=${user_mail//#EXT#@asistemaspt.onmicrosoft.com}
-            user_mail=${mail_int/_/@}
-          else
-            user_mail=${{ parameters.mail }}
-          fi
-
-          echo "Added a new line to terraform.tfvars file at $AZUREDEVOPSREPO repository"              
-          case ${{ parameters.option }} in
-            infra_admin)
-              echo "Check that user is not currently at the group all_users"
-              mail=`sed -n '/^all_users/,/^]/p' terraform.tfvars | grep $user_mail`
-              if [[ -z "$mail" ]] 
-              then 
-                echo "Adding new user to all_users group"
-                sed -i "/all_users/a \ \ \"$user_mail\"," terraform.tfvars
-                echo "User added to all_users group"
-              fi
-            ;;              
-            dplt_pipeline)
-              echo "Check that user is not currently at the group all_users"
-              mail=`sed -n '/^all_users/,/^]/p' terraform.tfvars | grep $user_mail`
-              if [[ -z "$mail" ]] 
-              then 
-                echo "Adding new user to all_users group"
-                sed -i "/all_users/a \ \ \"$user_mail\"," terraform.tfvars
-                echo "User added to all_users group"
-              fi
-            ;;
-            avitech_slovakia)
-              echo "Check that user is not currently at the group all_users"
-              mail=`sed -n '/^all_users/,/^]/p' terraform.tfvars | grep $user_mail`
-              if [[ -z "$mail" ]] 
-              then 
-                echo "Adding new user to all_users group"
-                sed -i "/all_users/a \ \ \"$user_mail\"," terraform.tfvars
-                echo "User added to all_users group"
-              fi
-            ;;
-            support_contrib)
-              echo "Check that user is not currently at the group all_users"
-              mail=`sed -n '/^all_users/,/^]/p' terraform.tfvars | grep $user_mail`
-              if [[ -z "$mail" ]] 
-              then 
-                echo "Adding new user to all_users group"
-                sed -i "/all_users/a \ \ \"$user_mail\"," terraform.tfvars
-                echo "User added to all_users group"
-              fi
-            ;;
-            remove_user)
-              echo "Remove user from all groups"
-              sed -i "/$user_mail/d" terraform.tfvars
-              echo "User removed from all groups"
-            ;;
-            *)
-              echo "Bad option"
-            ;;
-          esac
-
-          echo "Commit new branch to remote repository $AZUREDEVOPSREPO"
-          git add *
-          git commit -m "Performed the actions requested at ticket ${{ parameters.branch }}"
-          if [ $? -eq 0 ] 
-          then 
-            echo "Commit has worked properly" 
-          else 
-            echo "Commit has not worked"
-            exit 1 
-          fi
-
-          echo "Push the new branch to remote repository $AZUREDEVOPSREPO"
-          git -c http.extraHeader="Authorization: bearer $(System.AccessToken)" push origin $BRANCHTARGET
-          if [ $? -eq 0 ] 
-          then 
-            echo "Push has worked properly" 
-          else 
-            echo "Push has not worked"
-            exit 1 
-          fi
-
-          echo "Launched terraform commands"
-          echo "terraform init"
-          terraform init
-          echo "terraform apply"
-          terraform apply -auto-approve
-
-          echo "Moving back to working path"
-          cd ..            
-
-          echo "Logout from Azure account"
-          az logout
-
-    - task: AzureCLI@2
-      displayName: "Pull Request creation for ${{ variables.AZUREDEVOPSREPO }} repository" 
-      condition: or(eq(parameters.option,'dplt_pipeline'),eq(parameters.option,'avitech_slovakia'),eq(parameters.option,'remove_user'),eq(parameters.option,'infra_admin'),eq(parameters.option,'support_contrib'))     
-      env:
-        ARM_CLIENT_ID: $(terraform-app-client-id)
-        ARM_CLIENT_SECRET: $(terraform-app-secret)
-        ARM_TENANT_ID: "9e296acd-1e44-44f0-8c77-cc9dbce85489"  #Must move to KeyVault or inside provider.tf
-      inputs:
-        azureSubscription: 'ecl-az-fact-svc-01-armconnection'
-        scriptType: 'bash'
-        scriptLocation: 'inlineScript'
-        inlineScript: |
-          bash nm-factory-inf-pip-operations/adding-azure-user/scripts/creating-pr.sh $(System.AccessToken) ${{ variables.AZUREDEVOPSREPO }} ${{ parameters.branch }} ${{ variables.REVIEWERS }}
+    - ${{ if or(eq(parameters.option,'dplt_pipeline'),eq(parameters.option,'avitech_slovakia'),eq(parameters.option,'remove_user'),eq(parameters.option,'infra_admin'),eq(parameters.option,'support_contrib')) }}:
+      - task: AzureCLI@2
+        displayName: "Pull Request creation for ${{ variables.AZUREDEVOPSREPO }} repository" 
+        condition: or(eq(parameters.option,'dplt_pipeline'),eq(parameters.option,'avitech_slovakia'),eq(parameters.option,'remove_user'),eq(parameters.option,'infra_admin'),eq(parameters.option,'support_contrib'))     
+        env:
+          ARM_CLIENT_ID: $(terraform-app-client-id)
+          ARM_CLIENT_SECRET: $(terraform-app-secret)
+          ARM_TENANT_ID: "9e296acd-1e44-44f0-8c77-cc9dbce85489"  #Must move to KeyVault or inside provider.tf
+        inputs:
+          azureSubscription: 'ecl-az-fact-svc-01-armconnection'
+          scriptType: 'bash'
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            bash nm-factory-inf-pip-operations/adding-azure-user/scripts/creating-pr.sh $(System.AccessToken) ${{ variables.AZUREDEVOPSREPO }} ${{ parameters.branch }} ${{ variables.REVIEWERS }}
 
     - task: AzureCLI@2
       displayName: "Merging with main branch at repository ${{ variables.AZUREREPO }}" 
@@ -499,16 +501,17 @@ stages:
         inlineScript: |
           bash nm-factory-inf-pip-operations/adding-azure-user/scripts/approve-pr.sh $(mypat) ${{ variables.AZUREREPO }} ${{ parameters.branch }}
 
-    - task: AzureCLI@2
-      displayName: "Merging with main branch at repository ${{ variables.AZUREDEVOPSREPO }}" 
-      condition: or(eq(parameters.option,'dplt_pipeline'),eq(parameters.option,'avitech_slovakia'),eq(parameters.option,'remove_user'),eq(parameters.option,'infra_admin'),eq(parameters.option,'support_contrib'))     
-      env:
-        ARM_CLIENT_ID: $(terraform-app-client-id)
-        ARM_CLIENT_SECRET: $(terraform-app-secret)
-        ARM_TENANT_ID: "9e296acd-1e44-44f0-8c77-cc9dbce85489"  #Must move to KeyVault or inside provider.tf
-      inputs:
-        azureSubscription: 'ecl-az-fact-svc-01-armconnection'
-        scriptType: 'bash'
-        scriptLocation: 'inlineScript'
-        inlineScript: |
-          bash nm-factory-inf-pip-operations/adding-azure-user/scripts/approve-pr.sh $(mypat) ${{ variables.AZUREDEVOPSREPO }} ${{ parameters.branch }}
+    - ${{ if or(eq(parameters.option,'dplt_pipeline'),eq(parameters.option,'avitech_slovakia'),eq(parameters.option,'remove_user'),eq(parameters.option,'infra_admin'),eq(parameters.option,'support_contrib')) }}:
+      - task: AzureCLI@2
+        displayName: "Merging with main branch at repository ${{ variables.AZUREDEVOPSREPO }}" 
+        condition: or(eq(parameters.option,'dplt_pipeline'),eq(parameters.option,'avitech_slovakia'),eq(parameters.option,'remove_user'),eq(parameters.option,'infra_admin'),eq(parameters.option,'support_contrib'))     
+        env:
+          ARM_CLIENT_ID: $(terraform-app-client-id)
+          ARM_CLIENT_SECRET: $(terraform-app-secret)
+          ARM_TENANT_ID: "9e296acd-1e44-44f0-8c77-cc9dbce85489"  #Must move to KeyVault or inside provider.tf
+        inputs:
+          azureSubscription: 'ecl-az-fact-svc-01-armconnection'
+          scriptType: 'bash'
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            bash nm-factory-inf-pip-operations/adding-azure-user/scripts/approve-pr.sh $(mypat) ${{ variables.AZUREDEVOPSREPO }} ${{ parameters.branch }}
