--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -362,7 +362,7 @@ stages:
           bash nm-factory-inf-pip-operations/adding-azure-user/scripts/approve-pr.sh $(mypat) ${{ variables.AZUREREPO }} ${{ parameters.branch }}
 
   - job: add_user_to_azure_devops
-    condition: or(eq(parameters.option,'dplt_pipeline'),eq(parameters.option,'avitech_slovakia'),eq(parameters.option,'remove_user'),eq(parameters.option,'infra_admin'),eq(parameters.option,'support_contrib'))
+    condition: or(eq('${{parameters.option}}','dplt_pipeline'),eq('${{parameters.option}}','avitech_slovakia'),eq('${{parameters.option}}','remove_user'),eq('${{parameters.option}}','infra_admin'),eq('${{parameters.option}}','support_contrib'))
     variables:
     - name: BRANCHTARGET
       value: "feature/${{ parameters.branch }}"
