--- a/Keycloak/users_mgmt_factory.yml
+++ b/Keycloak/users_mgmt_factory.yml
@@ -7,10 +7,10 @@ pool:
 variables:
   - group: factory-dev-keycloak-user-mgmt
   - name: keycloak_hostname
-    value: keycloak-factory-dev.dplt.dev
+    value: keycloak-factory.dplt.dev
     readonly: true
   - name: user_realm
-    value: factory-dev
+    value: factory
     readonly: true
 
 parameters:
@@ -65,9 +65,6 @@ stages:
                 echo "##vso[task.setvariable variable=lastname]$lastname"    
                 echo "##vso[task.setvariable variable=azuserid]$azuserid" 
 
-          # FIXME
-          # - checkout: test_for_pipeline
-
           - task: Bash@3
             displayName: "Creating user at Keycloak"
             condition: notIn( '${{parameters.option}}', 'remove_user')
@@ -81,7 +78,8 @@ stages:
                 docker run --entrypoint `pwd`/Keycloak/keycloak-user-creation.sh -v `pwd`:`pwd` -w `pwd` -i --rm quay.io/keycloak/keycloak:19.0.3 ${{ variables.keycloak_hostname }} ${{ variables.user_realm }} $(password) ${{ parameters.mail }} $(firstname) $(lastname) $(azuserid)
 
           - task: Bash@3
-            displayName: "Adding/removing user at Keycloak groups"
+            displayName: "Modifying user at Keycloak groups"
+            condition: notIn( '${{parameters.option}}', 'remove_user')
             inputs:
               targetType: inline
               script: |
@@ -89,7 +87,7 @@ stages:
 
                 chmod +x ./Keycloak/keycloak-user-mgmt.sh
 
-                docker run --entrypoint `pwd`/Keycloak/keycloak-user-mgmt.sh -v `pwd`:`pwd` -w `pwd` -i --rm quay.io/keycloak/keycloak:19.0.3 ${{ variables.keycloak_hostname }} ${{ variables.user_realm }} ${{ parameters.mail }} $(password)
+                docker run --entrypoint `pwd`/Keycloak/keycloak-user-mgmt.sh -v `pwd`:`pwd` -w `pwd` -i --rm quay.io/keycloak/keycloak:19.0.3 ${{ variables.keycloak_hostname }} ${{ variables.user_realm }} $(password) ${{ parameters.mail }} ${{ parameters.option }}
 
           - task: Bash@3
             displayName: "Removing user at Keycloak"
@@ -101,4 +99,4 @@ stages:
 
                 chmod +x ./Keycloak/keycloak-user-deletion.sh
 
-                docker run --entrypoint `pwd`/Keycloak/keycloak-user-deletion.sh -v `pwd`:`pwd` -w `pwd` -i --rm quay.io/keycloak/keycloak:19.0.3 ${{ variables.keycloak_hostname }} ${{ variables.user_realm }} ${{ parameters.mail }} $(password)
+                docker run --entrypoint `pwd`/Keycloak/keycloak-user-deletion.sh -v `pwd`:`pwd` -w `pwd` -i --rm quay.io/keycloak/keycloak:19.0.3 ${{ variables.keycloak_hostname }} ${{ variables.user_realm }} $(password) ${{ parameters.mail }}
