--- a/Keycloak/users_mgmt_factory.yml
+++ b/Keycloak/users_mgmt_factory.yml
@@ -27,6 +27,7 @@ parameters:
       - dplt_pipeline
       - dplt_developer
       - infra_admin
+      - avitech_slovakia
       - remove_user
 
 stages:
